# stoch-sim-mandelbrot

./: LICENSE  README.md  StochSimKush.ipynb  final_assignment1.ipynb  gitignore.txt  pre-commit-config.yaml  pyproject.toml
Zainab's changes/: Mandelbrot Analysis.ipynb
notebook/: Untitled.ipynb  mandelbrot.ipynb
