[project]
name = "stochastic-spatial-infection"
version = "0.1.0"
description = "Second assignment for Introduction to Computational Science"
readme = "README.md"
authors = [
    { name = "Henry Zwart", email = "henrybzwart@gmail.com" },
    { name = "Margarita Petrova" },
]

requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.9.4",
    "jupyterlab-git>=0.50.1",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "nbstripout>=0.7.1",
    "ndlib>=5.1.1",
    "networkx>=3.3",
    "notebook>=7.2.2",
    "numba==0.60.0",
    "numpy>=2.0",
    "polars>=1.9.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
]

[project.scripts]
stochastic-spatial-infection = "stochastic_spatial_infection:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
