[project]
name = "stoch-sim-mandelbrot"
version = "0.1.0"
description = "Stochastic simulation of the Mandelbrot set"
readme = "README.md"
authors = [
    { name = "Margarita Petrova" },
    { name = "Zaineb" },
    { name = "Kush" }
]
requires-python = ">=3.12"
dependencies = [
    "ipympl>=0.9.4",
    "jupyterlab-git>=0.50.1",
    "jupyterlab>=4.2.5",
    "matplotlib>=3.9.2",
    "nbstripout>=0.7.1",
    "numpy>=2.0",
    "scipy>=1.14.1",
]

[project.scripts]
stoch-sim-mandelbrot = "stoch_sim_mandelbrot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stoch_sim_mandelbrot"]
